--- a/app/views/cms/routes/index.html.erb
+++ b/app/views/cms/routes/index.html.erb
@@ -1,6 +1,8 @@
 <% use_page_title "Rails Routes" %>
 <%= render layout: 'page_title' do %>
-    <%= link_to "Page Routes", page_routes_path, class: 'btn btn-primary right' %>
+  <p class="pull-right">
+    <%= link_to "Page Routes", page_routes_path, class: 'btn btn-default' %>
+  </div>
 <% end %>
 
 <div class="padded row-fluid">
