Add attachment manager to html block by default

--- a/app/views/cms/html_blocks/_form.html.erb
+++ b/app/views/cms/html_blocks/_form.html.erb
@@ -4,6 +4,7 @@
     <div class="col-sm-12">
       <%= f.input :name %>
       <%= f.input :content, as: :text_editor %>
+      <%= f.cms_attachment_manager %>
       <%= f.cms_tag_list %>
     </div>
   </div>
