--- a/app/views/layouts/cms/_main_menu.html.erb
+++ b/app/views/layouts/cms/_main_menu.html.erb
@@ -17,7 +17,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <%= link_to image_tag('cms/logo.png', class: 'navbar-brand'), "/" %>
+    <%= link_to image_tag(Cms.logo, class: 'navbar-brand'), "/" %>
   </div>
   <div class="collapse navbar-collapse">
     <ul class="nav navbar-nav">
