--- a/app/assets/stylesheets/cms/application.css.scss
+++ b/app/assets/stylesheets/cms/application.css.scss
@@ -46,3 +46,12 @@ h1.page-header {
     padding-bottom: 5px;
   }
 }
+
+footer {
+  padding-top: 20px;
+  font-size: 11px;
+  a {
+    color: #BFBFBF;
+  }
+  color: #BFBFBF;
+}
