--- a/app/views/cms/content/show.html.erb
+++ b/app/views/cms/content/show.html.erb
@@ -3,6 +3,9 @@
     <%# JQuery is required both for page_editor and cms/user. But it needs to be included only once.  %>
     <%= javascript_include_tag 'jquery' %>
     <% if @show_toolbar %>
+        <script type="text/javascript" charset="utf-8">
+          var page_id = <%= @page.id %>;
+        </script>
         <%= javascript_include_tag 'cms/page_editor' %>
         <%= stylesheet_link_tag 'cms/page_content_editing' %>
         <%= csrf_meta_tags %>
