Add min-height to cms-container-contents

--- a/app/assets/stylesheets/cms/page_content_editing.css.scss
+++ b/app/assets/stylesheets/cms/page_content_editing.css.scss
@@ -2,6 +2,9 @@
   background-color: #efefef;
   font-family: Helvetica, Arial, Verdana, sans-serif;
   position: relative;
+  .cms-container-contents {
+    min-height: 20px;
+  }
   .cms-toolbar {
     background-color: #505050;
     padding: 2px;
