--- a/app/assets/stylesheets/cms/page_content_editing.css.scss
+++ b/app/assets/stylesheets/cms/page_content_editing.css.scss
@@ -17,6 +17,7 @@
       background-color: #858585;
       padding: 2px;
       position: relative;
+      cursor: move;
     }
   }
   .cms-connector:hover {
