--- a/app/assets/stylesheets/cms/page_content_editing.css.scss
+++ b/app/assets/stylesheets/cms/page_content_editing.css.scss
@@ -18,6 +18,9 @@
       padding: 2px;
       position: relative;
       cursor: move;
+      .cms-remove-content-link {
+        float: right;
+      }
     }
   }
   .cms-connector:hover {
@@ -48,9 +51,8 @@
     text-align: center;
     vertical-align: middle;
     cursor: pointer;
-    border: 1px solid transparent;
     white-space: nowrap;
-    padding: 3px 6px;
+    padding: 2px 4px;
     font-size: 10px;
     border-radius: 4px;
     font-weight: bold;
