Disable in page editor

--- a/app/assets/stylesheets/cms/page_content_editing.css.scss
+++ b/app/assets/stylesheets/cms/page_content_editing.css.scss
@@ -12,7 +12,8 @@
   .cms-connector {
     outline: 1px solid transparent;
     -webkit-transition: outline 0.2s linear;
-    
+    overflow: hidden; 
+    float: none;
     .cms-toolbar-connector {
       background-color: #858585;
       padding: 2px;
