--- a/app/views/cms/menus/_menu.html.erb
+++ b/app/views/cms/menus/_menu.html.erb
@@ -5,5 +5,4 @@
       %><%= render :partial => "/cms/menus/menu_item", :object => item, :locals => { :depth => 1, :position => i + 1, :item_count => items.length }
       %><% end 
 %>  </ul>
-<% end
-%></div>
+<% end %><div style="clear:both"></div></div>
