users listing and change roles ui changed

--- a/app/assets/stylesheets/cms/application.css.scss
+++ b/app/assets/stylesheets/cms/application.css.scss
@@ -58,3 +58,4 @@ footer {
 }
 
 .form-group .checkbox, .form-group .radio{padding-left:20px;}
+.checkbox_with_no_padding .checkbox label{padding-left: 0px;}
