--- a/app/views/layouts/cms/_main_menu.html.erb
+++ b/app/views/layouts/cms/_main_menu.html.erb
@@ -2,7 +2,10 @@
   <div class="container">
     <div class="row">
       <ul class="nav navbar-nav pull-right">
-        <li><%= link_to current_user.full_name, cms.edit_user_path(current_user) unless current_user.guest? %></li>
+        <li>
+          <%= link_to current_user.full_name, 'javascript:void(0);' unless current_user.guest? %>
+          <%#= link_to current_user.full_name, cms.edit_user_path(current_user) unless current_user.guest? %>
+        </li>
         <li><%= link_to "Help", 'https://github.com/browsermedia/browsercms/wiki', target: '_blank' %></li>
         <li><%= link_to "Logout", cms.logout_path unless current_user.guest? %></li>
       </ul>
