--- a/app/views/cms/tasks/new.html.erb
+++ b/app/views/cms/tasks/new.html.erb
@@ -15,7 +15,7 @@
       <div class="panel-body">
         <%= f.association :assigned_to,
                           label: "Assign To",
-                          collection: Cms::User.active.able_to_edit_or_publish_content.order("first_name, last_name, login"),
+                          collection: Cms::User.able_to_edit_or_publish_content.order("first_name, last_name, login"),
                           include_blank: false,
                           label_method: :full_name_with_login
         %>
