--- a/app/views/cms/users/_user_fields.html.erb
+++ b/app/views/cms/users/_user_fields.html.erb
@@ -1,7 +1,8 @@
-<%= f.input :login, label: 'Username' %>
+<%#= f.input :login, label: 'Username' %>
 <%= f.input :email, required: true %>
 <%= f.input :first_name, label: 'First Name' %>
 <%= f.input :last_name, label: 'Last Name' %>
-<%= f.input :expires_at, label: 'Expiration Date', as: :date_picker %>
+<%#= f.input :role, as: :hidden %>
+<%#= f.input :expires_at, label: 'Expiration Date', as: :date_picker %>
 
 
