users creation link commented

--- a/app/views/layouts/cms/_main_menu.html.erb
+++ b/app/views/layouts/cms/_main_menu.html.erb
@@ -52,7 +52,7 @@
           Administration <b class="caret"></b>
         <% end %>
         <ul class="dropdown-menu">
-          <%= nav_link_to "Users", cms.users_path %>
+          <%#= nav_link_to "Users", cms.users_path %>
           <%= nav_link_to "Groups", cms.groups_path %>
           <%= divider_tag %>
           <%= nav_link_to "Partials", cms.page_partials_path %>
