--- a/app/views/cms/users/index.html.erb
+++ b/app/views/cms/users/index.html.erb
@@ -27,7 +27,7 @@
     </div>
   <% end %>
   <div class="col-sm-2">
-    <%= link_to "Add User", new_user_path, :id => "add_user_button", :class => "btn btn-default pull-right" %>
+    <%#= link_to "Add User", new_user_path, :id => "add_user_button", :class => "btn btn-default pull-right" %>
   </div>
 </div>
 
